Closed Bug 448199 Opened 17 years ago Closed 3 years ago

nsIMsgIdentity should have a UUID member to make it easy to sync

Categories

(MailNews Core :: Backend, defect)

defect
Not set
normal

Tracking

(thunderbird_esr102 unaffected)

RESOLVED FIXED
105 Branch
Tracking Status
thunderbird_esr102 --- unaffected

People

(Reporter: dmosedale, Assigned: darktrojan)

References

(Blocks 1 open bug)

Details

(Whiteboard: [has draft patch])

Attachments

(2 files, 4 obsolete files)

Attached patch add UUIDs for nsIMsgIdentity, v1 (obsolete) — Splinter Review
Here's a patch. This version still needs unit tests and a bit of error-checking cleanup before it's ready for review.
Attached patch add UUIDs for nsIMsgIdentity, v2 (obsolete) — Splinter Review
Now with more error-checking and fewer crashes! Still needs some more error-checking and tests before it's review ready, though.
Attachment #331520 - Attachment is obsolete: true
Attached patch add UUIDs for nsIMsgIdentity, v3 (obsolete) — Splinter Review
Strip the leading { and trailing } off the generated UUID before saving it.
Attachment #331535 - Attachment is obsolete: true
Attached patch add UUIDs for nsIMsgIdentity, v4 (obsolete) — Splinter Review
Make the trimming of the trailing \} actually work.
Attachment #331542 - Attachment is obsolete: true
Product: Core → MailNews Core
Attachment #331549 - Attachment is patch: true
Attachment #331549 - Attachment mime type: application/octet-stream → text/plain
Comment on attachment 331549 [details] [diff] [review] add UUIDs for nsIMsgIdentity, v4 Turns out this was the wrong file.
Attachment #331549 - Attachment is obsolete: true
dmose, is this ready for review?
Flags: wanted-thunderbird3?
Whiteboard: [has draft patch]
Good question; I'll need to spend a bit of time looking at it. If someone else feels like picking this up, dusting it off, and seeing where it's at, that'd be fine by me.
Flags: wanted-thunderbird3? → wanted-thunderbird3+
Dmose, are you still working on this? Standard8, rkent, would this be even accepted? It looks like it would be needed for Sync feature for TB that we discussed recently.
Assignee: dmose → nobody
I think that UUID features like this are a good thing, so I would be in favor of it. Unit tests should be pretty simple for this, and could probably just be added to existing tests.
Anyone feel like picking this up? Seems all it requires is a review by someone competent (which unfortunately isn't me).
Removing myslef on all the bugs I'm cced on. Please NI me if you need something on MailNews Core bugs from me.

Could this issue please be picked up so that Thunderbird Sync comes one step closer?

Assignee: nobody → geoff
Status: NEW → ASSIGNED

Adds a 'UID' attribute, stored in the identity's preferences as 'uid', just like nsIAbDirectory. If there's no value, a new UUID is created on access.

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/71ed8e2c8537
Add a unique identifier to nsIMsgIdentity. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: