Bug 448199 - Add a unique identifier to nsIMsgIdentity. r=mkmelin Adds a 'UID' attribute, stored in the identity's preferences as 'uid', just like nsIAbDirectory. If there's no value, a new UUID is created on access.

Differential Revision: https://phabricator.services.mozilla.com/D153822

--HG--
extra : rebase_source : 93604a20311e78b969072298867ac2b1e92eac32